--- a/app/team/new-team.component.html
+++ b/app/team/new-team.component.html
@@ -2,26 +2,30 @@
     <Button [text]="'Reset'" (tap)="resetDb()"></Button>
 </ActionBar>
 <StackLayout class="page">
-    <StackLayout orientation="horizontal" horizontalAlignement="stretch">
-        <Label [text]="'Full name: '" horizontalAlignment="center" width="30%" textAlignment="right" verticalAlignement="center"></Label>
-        <TextField #fName (textChange)="textChangeHandler(fName.text, 'fname')" width="70%"></TextField>
-    </StackLayout>
     <StackLayout orientation="horizontal">
         <Label [text]="'Short name: '" horizontalAlignment="center" width="30%" textAlignment="right" verticalAlignement="center"></Label>
-        <TextField #sName (textChange)="textChangeHandler(sName.text, 'sname')" width="30%"></TextField>
+        <TextField #sName [(ngModel)]="shortName" (textChange)="textChangeHandler(sName.text,'sname')" width="30%"></TextField>
+    </StackLayout>
+    <StackLayout orientation="horizontal" horizontalAlignement="stretch">
+        <Label [text]="'Full name: '" horizontalAlignment="center" width="30%" textAlignment="right" verticalAlignement="center"></Label>
+        <!--<TextField #fName (textChange)="textChangeHandler(fName.text, 'fname')" width="70%"></TextField>-->
+        <TextField #fName [(ngModel)]="fullName" width="70%"></TextField>
     </StackLayout>
     <Label [text]="'F_Name: '+fullName+', S_Name: '+shortName" ></Label>
     <StackLayout orientation="horizontal">
         <button [text]="'Create'" class="btn btn-primary" width="25%" (tap)="submit(1)"></button>
-        <button [text]="'Cancel'" width="25%" class="btn btn-warning" (tap)="submit(0)"></button>
+        <button [text]="'Cancel'" width="25%" class="btn btn-warning" (tap)="cancel()"></button>
         <button [text]="'Refresh'" width="25%" class="btn btn-info" (tap)="refresh()"></button>
     </StackLayout>
     <Label [text]="'----------------------------'" horizontalAlignment="center"></Label>
 
-    <ListView [items]="teams" width="40%">
+    <ListView [items]="teams" width="80%">
         <ng-template let-team="item" let-inx="index">
             <!--<label [text]="team.shortName"></label>-->
-            <label [text]="team.fullName"></label>
+            <GridLayout columns="*, 3*">
+                <label [text]="team.shortName" row="inx" col="0"></label>
+                <label [text]="team.fullName" row="inx" col="1"></label>
+            </GridLayout>
         </ng-template>
     </ListView>
 </StackLayout>
